[package]
name = "magistr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0" }
axum = "0.7.4"
miette = { version = "7.2.0", features = ["fancy"] }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-full"] }
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.23"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
clap = { version = "4.2.2", features = ["derive", "env"] }
thiserror = "1.0.40"
chrono = "0.4.24"
rust-embed = "8.3.0"
mime_guess = "2.0.4"
tower = "0.4.13"
cached = { version = "0.53.1", features = ["async"] }
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"

[profile.release]
lto = "fat"
strip = "debuginfo"
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = true
