[package]
name = "magistr"
version = "0.2.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.14.0" }
axum = "0.8.4"
cached = { version = "0.56.0", features = ["async"] }
chrono = "0.4.24"
figment = { version = "0.10.19", features = ["env", "toml"] }
miette = { version = "7.2.0", features = [] }
mime_guess = "2.0.4"
opentelemetry = "0.30"
opentelemetry-otlp = "0.30.0"
opentelemetry-resource-detectors = "0.9.0"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
rand = "0.9.2"
rust-embed = "8.3.0"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.16"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace", "compression-full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }

[profile.release]
lto = "fat"
strip = "debuginfo"
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = true
