[package]
name = "magistr"
version = "0.2.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.15.5" }
axum = "0.8.4"
cached = { version = "0.59.0", features = ["async"] }
chrono = "0.4.24"
figment = { version = "0.10.19", features = ["env", "toml"] }
miette = { version = "7.2.0", features = [] }
mime_guess = "2.0.4"
opentelemetry = "0.31"
opentelemetry-otlp = "0.31.1"
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
rand = "0.10.0"
rust-embed = "8.3.0"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.16"
tokio = { version = "1.51.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace", "compression-full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }

[profile.release]
lto = "fat"
strip = "debuginfo"
panic = "unwind"
opt-level = "z"
codegen-units = 1

[profile.dev.package.askama_derive]
# This will make incremental compilations faster, but the initial compile will
# be slower.
opt-level = 3
